--- a/web/css/courseList.css
+++ b/web/css/courseList.css
@@ -128,6 +128,9 @@ body {
 
 .header h1 {
     /*font-size: 28px;*/
+}
+.header h2 {
+    font-size: 28px;
     font-weight: bold;
     color: #007bff;
 }
@@ -295,6 +298,7 @@ body {
 /* Search Input */
 .search-input {
     width: 80%;
+    width: 100%;
     padding: 10px 15px;
     border: 1px solid #ddd;
     border-radius: 25px 0 0 25px;
