--- a/web/css/ViewUserList.css
+++ b/web/css/ViewUserList.css
@@ -168,7 +168,65 @@ a.sidebar-link:hover {
     height: 40px;
     width: 40px;
 }
+.card{
+    background-color: #f5f5f5;
+    transition: .4s;
+    cursor: pointer;
+    color: #000;
+    margin-bottom: 1rem;
+}
+.card:hover{
+    background-color: #293b5f;
+    color: #FFF;
+    transform: translateY(-10.5px);
+}
+.text-success{
+    background-color: #71c664;
+    padding: 0.25rem 0.35rem;
+    font-size: 0.715rem;
+    color: #FFF !important;
+    border-radius: 5px;
+}
+.table>thead tr{
+    color: #FFF;
+    text-align: left;
+}
+tr.highlight th{
+    background-color: #293b5f;
+    color: #FFF;
+}
+.conten{
+    flex: 1 1 auto;
+    
+}
 
 
-
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+    .navbar form{
+        max-width: 320px;
+        
+    }
+    .input-group-navbar .form-control:focus{
+        outline: none;
+        box-shadow: 0 0 0 0 rgba(255, 255, 255);
+        border: none;
+        
+    }
+    .input-group-navbar .form-control{
+        color: #3e4455;      
+    }
+    .form-control::placeholder{
+        background-color: #fff;
+        
+    }
+    .input-group-navbar .btn{
+        background-color: #727cf5;
+        color: #FFF;
+        font-family: 'Poppins',sans-serif;
+        cursor: pointer;
+        z-index: 10000;
+    }
+    .navbar-expand .navbar-nav .dropdown-menu{
+        box-shadow: 0 .1rem .2rem rgba(0,0,0,.05);
+    }
+}
