--- a/web/css/subjectList.css
+++ b/web/css/subjectList.css
@@ -122,7 +122,7 @@ body {
 .input-number{
     padding: 12px;
     border-radius: 5px;
-    width: 10px
+    width: 60px;
     border: 1px solid #ddd;
     background-color: white;
     font-size: 14px;
