--- a/web/css/userProfile.css
+++ b/web/css/userProfile.css
@@ -221,3 +221,19 @@ body {
   white-space: nowrap;
   border-width: 0;
 }
+
+.btn-back {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff; /* Blue background */
+    color: white; /* White text */
+    border: none;
+    border-radius: 5px;
+    text-decoration: none; /* Remove underline */
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.btn-back:hover {
+    background-color: #0056b3; /* Darker blue on hover */
+}
